<resources>
    <string name="msg_wifi_enabled">Wifi enabled</string>
    <string name="msg_mobile_data_enabled">Mobile data enabled</string>
    <string name="msg_not_connected_to_internet">Not connected to Internet</string>

    <string name="log_fcm_message_id">"FCM Message Id: "</string>
    <string name="log_fcm_notification_message">"FCM Notification Message: "</string>
    <string name="log_fcm_data">"FCM Data Message: "</string>
    <string name="log_fcm_data_message">"FCM Data Message:(TA)G "</string>
    <string name="text_ok">OK</string>
    <string name="text_exit">Exit</string>
    <string name="text_retry">Retry</string>
    <string name="session_expired">Session expired.</string>
    <string name="loading">Loading…</string>

    <!-- Image Chooser -->
    <string name="text_cancel">Cancel</string>
    <string name="text_camera">Camera</string>
    <string name="text_setting">Settings</string>
    <string name="text_gallery">Gallery</string>
    <string name="text_multiple">Multiple</string>
    <string name="text_choose_image">Choose Image</string>
    <string name="permission_camera_storage_msg">Permissions are required for camera &amp; storage.</string>
    <string name="permission_camera_storage_denied_msg">Permissions denied. Please grant permission for camera &amp; storage in setting.</string>

    <!--Error-->
    <string name="error_email_field_empty">Please enter email address.</string>
    <string name="error_invalid_email">Please enter valid email address.</string>
    <string name="error_password_field_empty">Please enter password.</string>
    <string name="error_confirm_password_field_empty">Please enter confirm password.</string>
    <string name="error_password_must_be_greater_than_5_character">Password must be greater than 5 character.</string>
    <string name="error_phone_number_field_empty">Please enter phone number.</string>
    <string name="error_invalid_phone_number">Please enter valid phone number.</string>
    <string name="error_first_name_field_empty">Please enter first name</string>
    <string name="error_name_field_empty">Please enter name</string>
    <string name="error_last_name_field_empty">Please enter last name</string>
    <string name="error_name_two_character_long">Name must contain at least two characters</string>
    <string name="error_first_name_two_character_long">First name must contain at least two characters</string>
    <string name="error_last_name_two_character_long">Last name must contain at least two characters</string>
    <string name="error_name_special_number_character">Name cannot contain number &amp; special characters</string>
    <string name="error_first_name_special_number_character">First name cannot contain number &amp; special characters</string>
    <string name="error_last_name_special_number_character">Last name cannot contain number &amp; special characters</string>
    <string name="error_password_mismatch">Password Mismatch!</string>
    <string name="error_no_files_added">No files added</string>
    <string name="error_device_not_supported">This device is not supported.</string>
    <string name="error_internet_not_connected">Not connected to internet. Please check your internet connection or try again later.</string>
    <string name="error_fb_login_failed">Facebook Login failed!!</string>
    <string name="error_not_a_valid_image_file">File is not a valid image.</string>

    <string name="rationale_ask_again">This app may not work correctly without the requested permissions. Open the app settings screen to modify app permissions.</string>
    <string name="title_settings_dialog">Permissions Required</string>

    <!--signup-->
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>

    <string name="phno">Phone Number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confpass">Confirm Password</string>
    <string name="referal_code">Date Of Birth(yyyy-mm-dd)</string>
    <string name="signup">Sign Up</string>
    <string name="signupfb">Sign Up With Facebook</string>
    <string name="email_phone">Registered Email ID</string>
    <string name="forgotpass"><u><b>Forgot Password?</b></u></string>
    <string name="gender">Gender :</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <!--otp screen-->
    <string name="resendotp">Resend OTP</string>
    <string name="editnumber">Edit Number</string>
    <string name="otp_details">Please Enter OTP number you have\n recieved as an SMS on phone no.</string>

    <!--choose quality-->
    <string name="relationship_history">Relationship History</string>
    <string name="ethnicity">Ethnicity</string>
    <string name="religion">Religion</string>
    <string name="height">Height</string>
    <string name="body_type">Body Type</string>
    <string name="smoking">Smoking</string>
    <string name="drinking">Drinking</string>
    <string name="next">Next</string>
    <string name="divorved">Divorced</string>
    <string name="never_married">Never Married</string>
    <string name="separated">Separated</string>
    <string name="widowed">Widowed</string>
    <string name="asian">Asian</string>
    <string name="indian">Indian</string>
    <string name="middle_eastern">Middle Eastern</string>
    <string name="black">Black/African</string>
    <string name="others">Others</string>

    <string name="atheist">Atheist</string>
    <string name="buddhist">Buddhist</string>
    <string name="hindu">Hindu</string>
    <string name="christian">Christian</string>
    <string name="muslim">Muslim</string>
    <string name="jewish">Jewish</string>

    <string name="athletic">Athletic</string>
    <string name="avg">Average</string>
    <string name="curvy">Curvy</string>
    <string name="slim">Slim</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="occasion">Occasionally</string>

    <string name="Button">Save and Continue</string>

</resources>
