<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/religion_atheist"
        android:title="@string/atheist"
        />

    <item
        android:id="@+id/religion_buddhist"
        android:title="@string/buddhist"
        />

    <item
        android:id="@+id/religion_hindu"
        android:title="@string/hindu"
        />

    <item
        android:id="@+id/religion_christian"
        android:title="@string/christian"
        />

    <item
        android:id="@+id/religion_muslim"
        android:title="@string/muslim"
        />

    <item
        android:id="@+id/religion_jewish"
        android:title="@string/jewish"
        />

    <item
        android:id="@+id/religion_others"
        android:title="@string/others"
        />




</menu>