<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/margin_top_otp"
        android:layout_marginStart="@dimen/margin_top_otp"
        android:layout_marginTop="@dimen/margin_top_otp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_view_steps"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/margin_top_otp"
            android:layout_marginStart="@dimen/margin_top_otp"
            android:layout_weight="0.1"
            android:orientation="horizontal"
            android:padding="14dp">

            <View
                android:id="@+id/view1"
                style="@style/viewStyle" />

            <View
                android:id="@+id/view2"
                style="@style/viewStyle" />

            <View
                android:id="@+id/view3"
                style="@style/viewStyle" />

            <View
                android:id="@+id/view4"
                style="@style/viewStyle" />

            <View
                android:id="@+id/view5"
                style="@style/viewStyle" />

            <View
                android:id="@+id/view6"
                style="@style/viewStyle" />

            <View
                android:id="@+id/view7"
                style="@style/viewStyle" />


        </LinearLayout>


        <com.skeleton.util.customview.MaterialEditText
            android:id="@+id/tv_relationship_history"
            style="@style/chooseQuality"
            android:background="@null"
            android:clickable="true"
            android:hint="@string/relationship_history" />

        <View style="@style/profileViewStyle" />

        <com.skeleton.util.customview.MaterialEditText
            android:id="@+id/tv_ethnicity"
            style="@style/chooseQuality"
            android:background="@null"
            android:clickable="true"
            android:hint="@string/ethnicity" />

        <View style="@style/profileViewStyle"

            />

        <com.skeleton.util.customview.MaterialEditText
            android:id="@+id/tv_religion"
            style="@style/chooseQuality"
            android:background="@null"
            android:clickable="true"
            android:hint="@string/religion" />

        <View style="@style/profileViewStyle"

            />

        <com.skeleton.util.customview.MaterialEditText
            android:id="@+id/tv_height"
            style="@style/chooseQuality"
            android:background="@null"
            android:clickable="true"
            android:hint="@string/height" />

        <View style="@style/profileViewStyle"

            />

        <com.skeleton.util.customview.MaterialEditText
            android:id="@+id/tv_body_type"
            style="@style/chooseQuality"
            android:background="@null"
            android:clickable="true"
            android:hint="@string/body_type" />


        <View style="@style/profileViewStyle"

            />

        <com.skeleton.util.customview.MaterialEditText
            android:id="@+id/tv_smoking"
            style="@style/chooseQuality"
            android:background="@null"
            android:clickable="true"
            android:hint="@string/smoking" />

        <View style="@style/profileViewStyle"

            />

        <com.skeleton.util.customview.MaterialEditText
            android:id="@+id/tv_drinking"
            style="@style/chooseQuality"
            android:background="@null"
            android:clickable="true"
            android:hint="@string/drinking" />

        <View style="@style/profileViewStyle"

            />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_top_otp"
            android:background="@drawable/bg_green"
            android:gravity="center"
            android:hint="@string/next"
            android:padding="@dimen/padding"
            android:textColor="@android:color/white" />


    </LinearLayout>

</android.support.v4.widget.NestedScrollView>